# project-4/server/src/interfaces/user.ts
@@ -6,3 +6,11 @@ export interface Iuser {
   billingAddress: { city: string; street: string }
   role: 'admin' | 'user'
 }
+
+export interface IuserUpdateDetail {
+  firstName?: string;
+  lastName?: string;
+  email?: string;
+  password?: string;
+  billingAddress?: { city: string; street: string };
+}
