# project-4/server/src/swagger/open-api.yaml
@@ -95,6 +95,39 @@ components:
         billingAddress:
           city: test
           street: tested
+    UserUpdate:
+      type: object
+      properties:
+        firstName:
+          type: string
+          description: The user first name
+        lastName:
+          type: string
+          description: The user last name
+        email:
+          type: string
+          format: email
+          description: The user email
+        password:
+          type: string
+          description: The user password
+        billingAddress:
+          type: object
+          properties:
+            city:
+              type: string
+              description: The user city
+            street:
+              type: string
+              description: The user street
+      example:
+        firstName: first Name
+        lastName: Last Name
+        email: email@email.com
+        password: tester
+        billingAddress:
+          city: test
+          street: tested
     UserLogin:
       type: object
       required:
@@ -148,7 +181,7 @@ components:
           format: double
           description: The price of the product
         imageData:
-          type: object
+          type: string
           description: image data
         description:
           type: string
@@ -244,9 +277,9 @@ components:
             quantity: 10
             totalProductPrice: 50
             imageData:
-              type: Buffer
+              type: string
               data:
-                - '-binary image data-'
+                - '-image link data-'
             _id: 63f4a4e5c5a97138eee1cf87
         totalPrice: 50
     CartProduct:
@@ -267,7 +300,7 @@ components:
           type: number
           description: total price of the product
         imageData:
-          type: object
+          type: string
           description: image data
     AddToCart:
       type: object
@@ -436,6 +469,7 @@ components:
               - billingAddress
               - deliveryDate
               - cardEndsWith
+              - customerCart
             properties:
               customerEmail:
                 type: string
@@ -456,6 +490,16 @@ components:
                 type: number
                 maxLength: 4
                 example: '3456'
+              customerCart:
+                type: object
+                properties:
+                  products:
+                    type: array
+                    items:
+                      allOf:
+                        - $ref: '#/components/schemas/CartProduct'
+                  totalPrice:
+                    type: number
 tags:
   - name: Users
     description: Users Routes
@@ -560,6 +604,59 @@ paths:
               schema:
                 type: string
                 example: incorrect username or password
+        '500':
+          $ref: '#/components/responses/internalServerError'
+  /user/edit-profile:
+    patch:
+      security:
+        - bearerAuth: []
+      summary: edit user profile
+      tags:
+        - Users
+      parameters:
+        - in: header
+          name: customerEmail
+          description: The user email
+          schema:
+            type: string
+          required: true
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserUpdate'
+      responses:
+        '200':
+          $ref: '#/components/responses/userLogin'
+        '400':
+          description: Bad Request.
+          content:
+            application/json:
+              schema:
+                oneOf:
+                  - type: object
+                    properties:
+                      message:
+                        type: string
+                      errors:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            message:
+                              type: string
+                            path:
+                              type: string
+                          required:
+                            - message
+                            - path
+                  - type: object
+                    properties:
+                      status:
+                        type: number
+                      message:
+                        type: string
         '500':
           $ref: '#/components/responses/internalServerError'
   /user/checkEmail:
@@ -701,7 +798,7 @@ paths:
     delete:
       security:
         - bearerAuth: []
-      summary: Remove a product from database
+      summary: Remove a product from database !!CURRENTLY DISABLED!!
       tags:
         - Products
       parameters:
